// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Text matches snapshot 1`] = `
<DocumentFragment>
  <p
    class="c-hhwXGU c-hhwXGU-jQkWJT-as-p c-hhwXGU-dTHfCl-mono-false decaText-root"
  />
</DocumentFragment>
`;

exports[`components/Text renders all lineHeights 1`] = `
<DocumentFragment>
  <p
    class="c-hhwXGU c-hhwXGU-jQkWJT-as-p c-hhwXGU-hVSCMQ-lineHeight-n c-hhwXGU-dTHfCl-mono-false decaText-root"
  >
    Children
  </p>
  <p
    class="c-hhwXGU c-hhwXGU-jQkWJT-as-p c-hhwXGU-kENwji-lineHeight-0 c-hhwXGU-dTHfCl-mono-false decaText-root"
  >
    Children
  </p>
  <p
    class="c-hhwXGU c-hhwXGU-jQkWJT-as-p c-hhwXGU-kbxdZX-lineHeight-1 c-hhwXGU-dTHfCl-mono-false decaText-root"
  >
    Children
  </p>
  <p
    class="c-hhwXGU c-hhwXGU-jQkWJT-as-p c-hhwXGU-bwqZvk-lineHeight-2 c-hhwXGU-dTHfCl-mono-false decaText-root"
  >
    Children
  </p>
  <p
    class="c-hhwXGU c-hhwXGU-jQkWJT-as-p c-hhwXGU-iwoKbl-lineHeight-3 c-hhwXGU-dTHfCl-mono-false decaText-root"
  >
    Children
  </p>
  <p
    class="c-hhwXGU c-hhwXGU-jQkWJT-as-p c-hhwXGU-guLIGy-lineHeight-4 c-hhwXGU-dTHfCl-mono-false decaText-root"
  >
    Children
  </p>
  <p
    class="c-hhwXGU c-hhwXGU-jQkWJT-as-p c-hhwXGU-fRvqxn-lineHeight-5 c-hhwXGU-dTHfCl-mono-false decaText-root"
  >
    Children
  </p>
  <p
    class="c-hhwXGU c-hhwXGU-jQkWJT-as-p c-hhwXGU-iBKVrw-lineHeight-6 c-hhwXGU-dTHfCl-mono-false decaText-root"
  >
    Children
  </p>
</DocumentFragment>
`;

exports[`components/Text renders all sizes 1`] = `
<DocumentFragment>
  <p
    class="c-hhwXGU c-hhwXGU-jQkWJT-as-p c-hhwXGU-iSJsTd-size-h1 c-hhwXGU-dTHfCl-mono-false decaText-root"
  >
    Children
  </p>
  <p
    class="c-hhwXGU c-hhwXGU-jQkWJT-as-p c-hhwXGU-fImtMF-size-h2 c-hhwXGU-dTHfCl-mono-false decaText-root"
  >
    Children
  </p>
  <p
    class="c-hhwXGU c-hhwXGU-jQkWJT-as-p c-hhwXGU-cjgGcF-size-h3 c-hhwXGU-dTHfCl-mono-false decaText-root"
  >
    Children
  </p>
  <p
    class="c-hhwXGU c-hhwXGU-jQkWJT-as-p c-hhwXGU-kEsGIF-size-h4 c-hhwXGU-dTHfCl-mono-false decaText-root"
  >
    Children
  </p>
  <p
    class="c-hhwXGU c-hhwXGU-jQkWJT-as-p c-hhwXGU-iUAjAV-size-h5 c-hhwXGU-dTHfCl-mono-false decaText-root"
  >
    Children
  </p>
  <p
    class="c-hhwXGU c-hhwXGU-jQkWJT-as-p c-hhwXGU-iCMAXq-size-h6 c-hhwXGU-dTHfCl-mono-false decaText-root"
  >
    Children
  </p>
  <p
    class="c-hhwXGU c-hhwXGU-jQkWJT-as-p c-hhwXGU-gpSXQN-size-body c-hhwXGU-dTHfCl-mono-false decaText-root"
  >
    Children
  </p>
  <p
    class="c-hhwXGU c-hhwXGU-jQkWJT-as-p c-hhwXGU-cqZFtv-size-bodySm c-hhwXGU-dTHfCl-mono-false decaText-root"
  >
    Children
  </p>
  <p
    class="c-hhwXGU c-hhwXGU-jQkWJT-as-p c-hhwXGU-ePSDQP-size-caption c-hhwXGU-dTHfCl-mono-false decaText-root"
  >
    Children
  </p>
  <p
    class="c-hhwXGU c-hhwXGU-jQkWJT-as-p c-hhwXGU-suMNG-size-footnote c-hhwXGU-dTHfCl-mono-false decaText-root"
  >
    Children
  </p>
</DocumentFragment>
`;

exports[`components/Text renders all variants 1`] = `
<DocumentFragment>
  <h1
    class="c-hhwXGU c-hhwXGU-cFWcZl-as-h1 c-hhwXGU-dTHfCl-mono-false decaText-root"
  >
    Children
  </h1>
  <h2
    class="c-hhwXGU c-hhwXGU-kKUNrJ-as-h2 c-hhwXGU-dTHfCl-mono-false decaText-root"
  >
    Children
  </h2>
  <h3
    class="c-hhwXGU c-hhwXGU-hlOZHJ-as-h3 c-hhwXGU-dTHfCl-mono-false decaText-root"
  >
    Children
  </h3>
  <h4
    class="c-hhwXGU c-hhwXGU-erFqON-as-h4 c-hhwXGU-dTHfCl-mono-false decaText-root"
  >
    Children
  </h4>
  <h5
    class="c-hhwXGU c-hhwXGU-cHMTHd-as-h5 c-hhwXGU-dTHfCl-mono-false decaText-root"
  >
    Children
  </h5>
  <h6
    class="c-hhwXGU c-hhwXGU-cpZldy-as-h6 c-hhwXGU-dTHfCl-mono-false decaText-root"
  >
    Children
  </h6>
  <span
    class="c-hhwXGU c-hhwXGU-jQkWJT-as-span c-hhwXGU-dTHfCl-mono-false decaText-root"
  >
    Children
  </span>
  <p
    class="c-hhwXGU c-hhwXGU-jQkWJT-as-p c-hhwXGU-dTHfCl-mono-false decaText-root"
  >
    Children
  </p>
  <blockquote
    class="c-hhwXGU c-hhwXGU-hfgHhY-as-blockquote c-hhwXGU-dTHfCl-mono-false decaText-root"
  >
    Children
  </blockquote>
  <b
    class="c-hhwXGU c-hhwXGU-jQkWJT-as-b c-hhwXGU-dTHfCl-mono-false decaText-root"
  >
    Children
  </b>
  <small
    class="c-hhwXGU c-hhwXGU-IpkNQ-as-small c-hhwXGU-dTHfCl-mono-false decaText-root"
  >
    Children
  </small>
  <del
    class="c-hhwXGU c-hhwXGU-jQkWJT-as-del c-hhwXGU-dTHfCl-mono-false decaText-root"
  >
    Children
  </del>
  <i
    class="c-hhwXGU c-hhwXGU-jQkWJT-as-i c-hhwXGU-dTHfCl-mono-false decaText-root"
  >
    Children
  </i>
  <em
    class="c-hhwXGU c-hhwXGU-jQkWJT-as-em c-hhwXGU-dTHfCl-mono-false decaText-root"
  >
    Children
  </em>
</DocumentFragment>
`;

exports[`components/Text renders sizes with variants 1`] = `
<DocumentFragment>
  <h1
    class="c-hhwXGU c-hhwXGU-cFWcZl-as-h1 c-hhwXGU-fImtMF-size-h2 c-hhwXGU-dTHfCl-mono-false decaText-root"
  >
    Children
  </h1>
</DocumentFragment>
`;
